grammar.js
    source: ($) => repeat($._statement),

    // -----------------------------------------------------------------------------
    // -                                     Atoms                                 -
    // -----------------------------------------------------------------------------

    // GDScript allows Unicode identifiers (Godot uses is_unicode_identifier_*).
    // XID_Continue already includes ASCII digits and `_` (connector punctuation);
    // `_` is added to the start class since it is not an XID_Start character.
    _identifier: ($) => /[\p{XID_Start}_][\p{XID_Continue}]*/,
    // any "symbol"
    identifier: ($) => $._identifier,
    // named symbol of a statement
    // such as a function name or class name
    name: ($) => $._identifier,
    // Code region syntax, parsed to offer code folding support (these are #region and #endregion marks)
    true: ($) => "true",
    false: ($) => "false",
    remote_keyword: ($) =>
      choice(
        "remote",
        "master",
        "slave",
        "puppet",
        "sync",
        "remotesync",
        "mastersync",
        "puppetsync",
      ),
    yield: ($) => "yield",
    string: ($) =>
      seq(
        alias($._string_start, '"'),
        repeat(choice($.escape_sequence, $._string_content)),
        alias($._string_end, '"'),
      ),

    float: ($) => {
      // GDScript permits `_` digit separators anywhere among the digits,
      // including trailing ones (e.g. 1_000.0, 1_0e1_0, 1_000_).
      const digits = /[0-9][0-9_]*/;
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        choice(
          seq(digits, ".", optional(digits), optional(exponent)),
          seq(".", digits, optional(exponent)),
          seq(digits, exponent),
        ),
      );
    },

    integer: ($) =>
      token(
        choice(
          // `_` separators may appear between/after digits (0x1234_00_f_f_).
          seq(choice("0x", "0X"), /[A-Fa-f0-9][A-Fa-f0-9_]*/),
          seq(choice("0o", "0O"), /[0-7][0-7_]*/),
          seq(choice("0b", "0B"), /[01][01_]*/),
          /[0-9][0-9_]*/,
        ),
      ),

    _node_path_segment: ($) =>
      seq(optional("%"), choice($._identifier, alias($.string, "value"))),

    get_node: ($) =>
      prec.right(
        choice(
          // `$` shorthand: an optional leading `/` then `/`-separated segments,
          // each of which may carry a unique-name `%` marker and be a bare name
          // or a quoted string — e.g. `$Foo`, `$"a/b"`, `$/root/Baz`, `$%Foo`,
          // `$Foo/%Bar`, `$%"Unique"`, `$Foo/"Bar Baz"`.
          seq(
            "$",
            optional("/"),
            $._node_path_segment,
            repeat(seq("/", $._node_path_segment)),
          ),
          // `%` unique-name shorthand: the leading `%` is the marker, so the first
          // segment is a bare name or string; later segments may be `%`-marked.
          seq(
            "%",
            choice($._identifier, alias($.string, "value")),
            repeat(seq("/", $._node_path_segment)),
          ),
        ),
      ),

    // -----------------------------------------------------------------------------
    // -                                     Type                                  -
    // -----------------------------------------------------------------------------

    // Higher precedence is required to avoid conflicts with the "in" keyword in
    // $.for_statement.
    _statement: ($) => choice($._simple_statements, $._compound_statement),

    body: ($) =>
      choice(
        $._simple_statements,
        $._inline_compound_statement,
        $._newline,
        $._body_end,
        seq($._indent, repeat($._statement), choice($._body_end, $._dedent)),
      ),

    // Compound statements that are valid inline (same line after `:`). elif and
    // else are not supported by the official compiler (tested in Godot 4.6)
    _inline_compound_statement: ($) =>
      choice(
        alias($._inline_if_statement, $.if_statement),
        $.for_statement,
        $.while_statement,
        $.match_statement,
      ),

    _simple_statements: ($) =>
      seq(
        trailSep1($._simple_statement, repeat1(";")),
        choice($._newline, $._body_end),
      ),

    expression_statement: ($) =>
      choice($._expression, $.assignment, $.augmented_assignment),

    // -- Annotation

    inferred_type: ($) => choice(":=", seq(":", "=")),

    _variable_assignment: ($) => seq("=", field("value", $._rhs_expression)),
    _variable_inferred_type_assignment: ($) =>
      seq(field("type", $.inferred_type), field("value", $._rhs_expression)),
    _variable_typed_assignment: ($) =>
      seq(":", field("type", $.type), "=", field("value", $._rhs_expression)),

    _setget_body: ($) =>
      seq(
        ":",
        choice(
          $._setget_assign,
          seq(
            $._indent,
            choice(
              seq(field("set", $.set_body), optional(field("get", $.get_body))),
              seq(field("get", $.get_body), optional(field("set", $.set_body))),
              $._setget_assign,
            ),
            $._dedent,
          ),
        ),
      ),

    setter: ($) => $._identifier,
    getter: ($) => $._identifier,
    setget: ($) =>
      choice(
        $._setget_body,
        seq(
          "setget",
          choice($.setter, seq($.setter, ",", $.getter), seq(",", $.getter)),
        ),
      ),

    _variable_statement: ($) =>
      seq(
        optional($.annotations),
        optional(field("static", $.static_keyword)),
        "var",
        field("name", $.name),
        optional(
          choice(
            $._variable_typed_definition,
            $._variable_inferred_type_assignment,
            $._variable_assignment,
          ),
        ),
        optional(field("setget", $.setget)),
      ),

    variable_statement: ($) =>
      seq(optional($.remote_keyword), $._variable_statement),

    export_variable_statement: ($) =>
      seq(
        "export",
        optional(field("arguments", $.arguments)),
        optional(choice("onready", $.remote_keyword)),
        $._variable_statement,
      ),

    const_statement: ($) =>
      seq(
        "const",
        field("name", $.name),
        choice(
          $._variable_inferred_type_assignment,
          $._variable_typed_assignment,
          $._variable_assignment,
        ),
      ),

    return_statement: ($) => seq("return", optional($._rhs_expression)),

    pass_statement: ($) => prec.left("pass"),
    match_statement: ($) =>
      seq(
        "match",
        field("value", $._expression),
        ":",
        field("body", $.match_body),
      ),

    match_body: ($) =>
      seq(
        $._indent,
        // Annotations are generally supported as statements throughout code but
        // as match blocks are expressions, we need to explicitly allow them
        // here. The pattern section body itself supports statements (thus annotations).
        //
        // Godot's parse_match() also consumes bare `pass` (+ newline) lines inside
        // the match block — used as a placeholder for an empty match, and legal
        // interspersed among branches (e.g. `match x:\n\tpass`).
        repeat1(
          choice(
            seq($.pass_statement, choice($._newline, $._body_end)),
            seq(
              optional(repeat(seq($.annotation, optional($._newline)))),
              $.pattern_section,
            ),
          ),
        ),
        $._dedent,
      ),

    // Sources:
    // - https://github.com/godotengine/godot-proposals/issues/4775
    // - https://github.com/godotengine/godot/pull/80085
    //
    // One guard per section. Meaning Comma separated patterns cannot each have
    // a guard.
    pattern_section: ($) =>
      seq(
        commaSep1($._pattern),
        optional($.pattern_guard),
        ":",
        field("body", $.body),
      ),

    _pattern: ($) =>
      choice(
        $._primary_expression,
        $.conditional_expression,
        $.pattern_binding,
      ),

    // Rather than creating distinct pattern array, dictionary, and expression
    // rules, we insert $.pattern_binding and $.pattern_open_ending into the
    // $.array and $.dictionary rules. Although, they are only valid in the
    // context of a pattern, this keeps the grammar simpler and allows us to
    // have arbitrary expressions in patterns.
    //
    // Additionally, $.dictionary accepts comma separated list of keys mixed
    // with pairs. This is also only valid in patterns and keeps the grammar a
    // bit simpler.
    pattern_open_ending: ($) => "..",

    // -----------------------------------------------------------------------------
    // -                                  Expressions                              -
    // -----------------------------------------------------------------------------

    _expression: ($) => choice($._primary_expression, $.conditional_expression),

    _primary_expression: ($) =>
      choice(
        $.binary_operator,
        $.self,
        $.super,
        $.yield,
        $.identifier,
        $.string,
        $.integer,
        $.float,
        $.true,
        $.false,
        $.null,
        $.unary_operator,
        $.string_name,
        $.node_path,
        $.get_node,
        $.attribute,
        $.subscript,
        $.base_call,
        $.call,
        $.array,
        $.dictionary,
        $.parenthesized_expression,
        $.await_expression,
      ),

    _rhs_expression: ($) => choice($._expression, $.lambda),

    // This makes an attribute's ast linear
    // When attribute is used inside $.attribute it becomes recursive spaghetti
    binary_operator: ($) => {
      // Inspired by tree-sitter-c
      const operators = [
        [seq("not", "in"), PREC.in],
        ["in", PREC.in],
        ["and", PREC.and],
        ["&&", PREC.and],
        ["or", PREC.or],
        ["||", PREC.or],
        ["+", PREC.plus],
        ["-", PREC.plus],
        ["*", PREC.times],
        ["/", PREC.times],
        ["**", PREC.times],
        ["%", PREC.times],
        ["|", PREC.bitwise_or],
        ["&", PREC.bitwise_and],
        ["^", PREC.xor],
        ["<<", PREC.shift],
        [">>", PREC.shift],
        ["<", PREC.compare],
        ["<=", PREC.compare],
        ["==", PREC.compare],
        ["!=", PREC.compare],
        [">=", PREC.compare],
        [">", PREC.compare],
        ["as", PREC.as],
        [seq("is", "not"), PREC.is],
        ["is", PREC.is],
      ];

      const choices = operators.map(([operator, precedence]) => {
        return prec.left(
          precedence,
          seq(
            field("left", $._primary_expression),
            field("op", operator),
            // A lambda may appear as the right operand, e.g. `cb or func(): pass`.
            // Only the right side is allowed: the left/leading position is
            // ambiguous with a `func` statement, and never occurs in practice.
            field("right", choice($._primary_expression, $.lambda)),
          ),
        );
      });

      return choice(...choices);
    },

    unary_operator: ($) => {
      // The operand may be a lambda, e.g. `not func(): return false`. As with
      // binary operators, the prefix token guarantees we are mid-expression, so
      // this never collides with a `func` statement.
      const operand = choice($._primary_expression, $.lambda);
      return choice(
        prec(PREC.unary, seq(choice("not", "!"), operand)),
        prec(PREC.unary, seq("-", operand)),
        prec(PREC.unary, seq("+", operand)),
        prec(PREC.unary, seq("~", operand)),
      );
    },

    // -- Accessors
    conditional_expression: ($) =>
      prec.right(
        PREC.conditional,
        seq(
          field("left", $._expression),
          "if",
          field("condition", $._expression),
          "else",
          field("right", choice($._expression, $.lambda)),
        ),
      ),

    array: ($) =>
      seq(
        "[",
        optional(trailCommaSep1(choice($._rhs_expression, $.pattern_binding))),
        optional(seq($.pattern_open_ending, optional(","))),
        "]",
      ),

    // -----------------------------------------------------------------------------
    // -                              Function Definition                          -
    // -----------------------------------------------------------------------------

    _parameters: ($) =>
      choice(
        $.identifier,
        $.typed_parameter,
        $.default_parameter,
        $.typed_default_parameter,
        $.variadic_parameter,
      ),

    parameters: ($) => seq("(", optional(trailCommaSep1($._parameters)), ")"),

    _return_type: ($) => seq("->", field("return_type", $.type)),

    function_definition: ($) =>
      seq(
        optional($.annotations),
        optional(choice($.static_keyword, $.remote_keyword)),
        "func",
        optional(field("name", $.name)),
        field("parameters", $.parameters),
        optional($._return_type),
        // body is optional to support abstract function definitions. Without
        // body, there must be a newline or body_end. _return_type with generic
        // parameters without a newline or body_end will erroneously parse
        // any following lines.
        choice(seq(":", field("body", $.body)), ";", $._newline, $._body_end),
      ),

    lambda: ($) =>
      seq(
        "func",
        optional(field("name", $.name)),
        field("parameters", $.parameters),
        optional($._return_type),
        ":",
        field("body", $.body),
      ),

    arguments: ($) =>
      seq("(", optional(trailCommaSep1($._rhs_expression)), ")"),

    call: ($) =>
      prec(
        PREC.call,
        seq($._primary_expression, field("arguments", $.arguments)),
      ),
    // This rule is for trailing backslashes to indicate line continuation. We
    // capture those as anonymous '\' tokens to be able to preserve them in code
    // formatters.
